--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="container">
         <h2 class="visually-hidden">Наші переваги</h2>
         <ul class="advances__list">
-          <li class="advances__item advances__item_margin">
+          <li class="advances__item ">
             <div class="advances__icon advances__icon_margin-flex">
               <svg width="70" height="70">
                 <use href="./images/icons.svg#icon-antenna"></use>
@@ -164,9 +164,14 @@
 
             <picture>
               <source srcset="./images/teammate-1-mobile@1x.webp 1x, ./images/teammate-1-mobile@2x.webp 2x"
-                type="image/webp" media="(max-width: 479px)">
+                type="image/webp" media="(max-width: 767px)">
               <source srcset="./images/teammate-1-mobile@1x.jpg 1x, ./images/teammate-1-mobile@2x.jpg 2x"
-                type="image/jpg" media="(max-width: 479px)">
+                type="image/jpg" media="(max-width: 767px)">
+
+              <source srcset="./images/teammate-1-tablet@1x.webp 1x, ./images/teammate-1-tablet@2x.webp 2x"
+                type="image/webp" media="(min-width: 768px)">
+              <source srcset="./images/teammate-1-tablet@1x.jpg 1x, ./images/teammate-1-tablet@2x.jpg 2x"
+                type="image/jpg" media="(min-width: 768px)">
 
               <img src="./images/teammate-1.jpg" alt="Фото Ігора Дем'яненка" width="270" />
             </picture>
@@ -205,9 +210,14 @@
 
             <picture>
               <source srcset="./images/teammate-2-mobile@1x.webp 1x, ./images/teammate-2-mobile@2x.webp 2x"
-                type="image/webp" media="(max-width: 479px)">
+                type="image/webp" media="(max-width: 767px)">
               <source srcset="./images/teammate-2-mobile@1x.jpg 1x, ./images/teammate-2-mobile@2x.jpg 2x"
-                type="image/jpg" media="(max-width: 479px)">
+                type="image/jpg" media="(max-width: 767px)">
+
+              <source srcset="./images/teammate-2-tablet@1x.webp 1x, ./images/teammate-2-tablet@2x.webp 2x"
+                type="image/webp" media="(min-width: 768px)">
+              <source srcset="./images/teammate-2-tablet@1x.jpg 1x, ./images/teammate-2-tablet@2x.jpg 2x"
+                type="image/jpg" media="(min-width: 768px)">
 
               <img src="./images/teammate-2.jpg" alt="Фото Ольги Рєпіни" width="270" />
             </picture>
@@ -243,9 +253,14 @@
 
             <picture>
               <source srcset="./images/teammate-3-mobile@1x.webp 1x, ./images/teammate-3-mobile@2x.webp 2x"
-                type="image/webp" media="(max-width: 479px)">
+                type="image/webp" media="(max-width: 767px)">
               <source srcset="./images/teammate-3-mobile@1x.jpg 1x, ./images/teammate-3-mobile@2x.jpg 2x"
-                type="image/jpg" media="(max-width: 479px)">
+                type="image/jpg" media="(max-width: 767px)">
+
+              <source srcset="./images/teammate-3-tablet@1x.webp 1x, ./images/teammate-3-tablet@2x.webp 2x"
+                type="image/webp" media="(min-width: 768px)">
+              <source srcset="./images/teammate-3-tablet@1x.jpg 1x, ./images/teammate-3-tablet@2x.jpg 2x"
+                type="image/jpg" media="(min-width: 768px)">
 
               <img src="./images/teammate-3.jpg" alt="Фото Ольги Рєпіни" width="270" />
             </picture>
@@ -281,11 +296,16 @@
 
             <picture>
               <source srcset="./images/teammate-4-mobile@1x.webp 1x, ./images/teammate-4-mobile@2x.webp 2x"
-                type="image/webp" media="(max-width: 479px)">
+                type="image/webp" media="(max-width: 767px)">
               <source srcset="./images/teammate-4-mobile@1x.jpg 1x, ./images/teammate-4-mobile@2x.jpg 2x"
-                type="image/jpg" media="(max-width: 479px)">
+                type="image/jpg" media="(max-width: 767px)">
 
-              <img src="./images/teammate-3.jpg" alt="Фото Ольги Рєпіни" width="270" />
+              <source srcset="./images/teammate-4-tablet@1x.webp 1x, ./images/teammate-4-tablet@2x.webp 2x"
+                type="image/webp" media="(min-width: 768px)">
+              <source srcset="./images/teammate-4-tablet@1x.jpg 1x, ./images/teammate-4-tablet@2x.jpg 2x"
+                type="image/jpg" media="(min-width: 768px)">
+
+              <img src="./images/teammate-4.jpg" alt="Фото Ольги Рєпіни" width="270" />
             </picture>
 
             <div class="team-list__content">
