--- a/index.html
+++ b/index.html
@@ -385,56 +385,58 @@
 
   <footer class="footer footer_padding">
     <div class="container footer-navigation">
-      <div>
-        <a class="logo logo_footer-margin-botom" href="./index.html">Web<span
-            class="logo logo_footer-white">Studio</span></a>
-        <address>
-          <ul class="address-list">
-            <li class="address-list__item">
-              <a class="address-list__link address-list__link_white" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+      <div class="footer-thumb">
+        <div>
+          <a class="logo logo_footer-margin-botom" href="./index.html">Web<span
+              class="logo logo_footer-white">Studio</span></a>
+          <address>
+            <ul class="address-list">
+              <li class="address-list__item">
+                <a class="address-list__link address-list__link_white" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+              </li>
+              <li class="address-list__item">
+                <a class="address-list__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="address-list__item">
+                <a class="address-list__link" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="join-container">
+          <p class="join-container__text join-container__text_margin">Приєднуйтесь</p>
+          <ul class="icon-list icon-list_footer-margin">
+            <li class="icon-list__item icon-list__item_opacity">
+              <a class="icon-list__link icon-list__link_white" href="#">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-list__item">
-              <a class="address-list__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="icon-list__item icon-list__item_opacity">
+              <a class="icon-list__link icon-list__link_white" href="#">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-list__item">
-              <a class="address-list__link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="icon-list__item icon-list__item_opacity">
+              <a class="icon-list__link icon-list__link_white" href="#">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list__item icon-list__item_opacity">
+              <a class="icon-list__link icon-list__link_white" href="#">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
-      </div>
-      <div class="join-container">
-        <p class="join-container__text join-container__text_margin">Приєднуйтесь</p>
-        <ul class="icon-list icon-list_footer-margin">
-          <li class="icon-list__item icon-list__item_opacity">
-            <a class="icon-list__link icon-list__link_white" href="#">
-              <svg width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-list__item icon-list__item_opacity">
-            <a class="icon-list__link icon-list__link_white" href="#">
-              <svg width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-list__item icon-list__item_opacity">
-            <a class="icon-list__link icon-list__link_white" href="#">
-              <svg width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-list__item icon-list__item_opacity">
-            <a class="icon-list__link icon-list__link_white" href="#">
-              <svg width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        </div>
       </div>
       <form class="subscribe-form" name="subscribe-form">
         <div>
