--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </li>
         </ul>
       </div>
-      <button class="burger-button">
+      <button class="burger-button js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
         <svg width="40" height="40">
           <use href="./images/icons.svg#icon-burger-button"></use>
         </svg>
@@ -133,19 +133,46 @@
         <h2 class="title">Чим ми займаємося</h2>
         <ul class="photo-section__list">
           <li class="photo-section__item">
-            <img src="./images/printing.jpg" alt="людина пише код" width="370" height="294" />
+
+            <picture>
+              <source srcset="./images/printing@1x.webp 1x, ./images/printing@2x.webp 2x" type="image/webp"
+                media="(min-width: 1200px)">
+              <source srcset="./images/printing@1x.jpg 1x, ./images/printing@2x.jpg 2x" type="image/jpg"
+                media="(min-width: 1200px)">
+
+              <img src="./images/printing.jpg" alt="людина пише код" width="370" height="294" />
+            </picture>
+
             <div class="photo-section__content photo-section__content_position">
               <h3 class="photo-section__descr">Десктопні додатки</h3>
             </div>
           </li>
           <li class="photo-section__item">
-            <img src="./images/laptop.jpg" alt="людина тримає телефон на фоні ноутбука" width="370" height="294" />
+
+            <picture>
+              <source srcset="./images/laptop@1x.webp 1x, ./images/laptop@2x.webp 2x" type="image/webp"
+                media="(min-width: 1200px)">
+              <source srcset="./images/laptop@1x.jpg 1x, ./images/laptop@2x.jpg 2x" type="image/jpg"
+                media="(min-width: 1200px)">
+
+              <img src="./images/laptop.jpg" alt="людина тримає телефон на фоні ноутбука" width="370" height="294" />
+            </picture>
+
             <div class="photo-section__content photo-section__content_position">
               <h3 class="photo-section__descr">Мобільні додатки</h3>
             </div>
           </li>
           <li class="photo-section__item">
-            <img src="./images/tablet.jpg" alt="палітра кольорів на планшеті" width="370" height="294" />
+
+            <picture>
+              <source srcset="./images/tablet@1x.webp 1x, ./images/tablet@2x.webp 2x" type="image/webp"
+                media="(min-width: 1200px)">
+              <source srcset="./images/tablet@1x.jpg 1x, ./images/tablet@2x.jpg 2x" type="image/jpg"
+                media="(min-width: 1200px)">
+
+              <img src="./images/tablet.jpg" alt="палітра кольорів на планшеті" width="370" height="294" />
+            </picture>
+
             <div class="photo-section__content photo-section__content_position">
               <h3 class="photo-section__descr">Дизайнерські рішення</h3>
             </div>
@@ -169,9 +196,14 @@
                 type="image/jpg" media="(max-width: 767px)">
 
               <source srcset="./images/teammate-1-tablet@1x.webp 1x, ./images/teammate-1-tablet@2x.webp 2x"
-                type="image/webp" media="(min-width: 768px)">
+                type="image/webp" media="(min-width: 768px) and (max-width: 1199px)">
               <source srcset="./images/teammate-1-tablet@1x.jpg 1x, ./images/teammate-1-tablet@2x.jpg 2x"
-                type="image/jpg" media="(min-width: 768px)">
+                type="image/jpg" media="(min-width: 768px) and (max-width: 1199px)">
+
+              <source srcset="./images/teammate-1-desktop@1x.webp 1x, ./images/teammate-1-desktop@2x.webp 2x"
+                type="image/webp" media="(min-width: 1200px)">
+              <source srcset="./images/teammate-1-desktop@1x.jpg 1x, ./images/teammate-1-desktop@2x.jpg 2x"
+                type="image/jpg" media="(min-width: 1200px)">
 
               <img src="./images/teammate-1.jpg" alt="Фото Ігора Дем'яненка" width="270" />
             </picture>
@@ -215,9 +247,14 @@
                 type="image/jpg" media="(max-width: 767px)">
 
               <source srcset="./images/teammate-2-tablet@1x.webp 1x, ./images/teammate-2-tablet@2x.webp 2x"
-                type="image/webp" media="(min-width: 768px)">
+                type="image/webp" media="(min-width: 768px) and (max-width: 1199px)">
               <source srcset="./images/teammate-2-tablet@1x.jpg 1x, ./images/teammate-2-tablet@2x.jpg 2x"
-                type="image/jpg" media="(min-width: 768px)">
+                type="image/jpg" media="(min-width: 768px) and (max-width: 1199px)">
+
+              <source srcset="./images/teammate-2-desktop@1x.webp 1x, ./images/teammate-2-desktop@2x.webp 2x"
+                type="image/webp" media="(min-width: 1200px)">
+              <source srcset="./images/teammate-2-desktop@1x.jpg 1x, ./images/teammate-2-desktop@2x.jpg 2x"
+                type="image/jpg" media="(min-width: 1200px)">
 
               <img src="./images/teammate-2.jpg" alt="Фото Ольги Рєпіни" width="270" />
             </picture>
@@ -258,9 +295,14 @@
                 type="image/jpg" media="(max-width: 767px)">
 
               <source srcset="./images/teammate-3-tablet@1x.webp 1x, ./images/teammate-3-tablet@2x.webp 2x"
-                type="image/webp" media="(min-width: 768px)">
+                type="image/webp" media="(min-width: 768px) and (max-width: 1199px)">
               <source srcset="./images/teammate-3-tablet@1x.jpg 1x, ./images/teammate-3-tablet@2x.jpg 2x"
-                type="image/jpg" media="(min-width: 768px)">
+                type="image/jpg" media="(min-width: 768px) and (max-width: 1199px)">
+
+              <source srcset="./images/teammate-3-desktop@1x.webp 1x, ./images/teammate-3-desktop@2x.webp 2x"
+                type="image/webp" media="(min-width: 1200px)">
+              <source srcset="./images/teammate-3-desktop@1x.jpg 1x, ./images/teammate-3-desktop@2x.jpg 2x"
+                type="image/jpg" media="(min-width: 1200px)">
 
               <img src="./images/teammate-3.jpg" alt="Фото Ольги Рєпіни" width="270" />
             </picture>
@@ -301,9 +343,14 @@
                 type="image/jpg" media="(max-width: 767px)">
 
               <source srcset="./images/teammate-4-tablet@1x.webp 1x, ./images/teammate-4-tablet@2x.webp 2x"
-                type="image/webp" media="(min-width: 768px)">
+                type="image/webp" media="(min-width: 768px) and (max-width: 1199px)">
               <source srcset="./images/teammate-4-tablet@1x.jpg 1x, ./images/teammate-4-tablet@2x.jpg 2x"
-                type="image/jpg" media="(min-width: 768px)">
+                type="image/jpg" media="(min-width: 768px) and (max-width: 1199px)">
+
+              <source srcset="./images/teammate-4-desktop@1x.webp 1x, ./images/teammate-4-desktop@2x.webp 2x"
+                type="image/webp" media="(min-width: 1200px)">
+              <source srcset="./images/teammate-4-desktop@1x.jpg 1x, ./images/teammate-4-desktop@2x.jpg 2x"
+                type="image/jpg" media="(min-width: 1200px)">
 
               <img src="./images/teammate-4.jpg" alt="Фото Ольги Рєпіни" width="270" />
             </picture>
@@ -515,28 +562,28 @@
 
   <!-- Mobile menu -->
 
-  <!-- <div class="mobile-menu">
-    <button class="mobile-menu-close-button" type="button">
+  <div class="mobile-menu js-menu-container">
+    <button class="mobile-menu-close-button js-close-menu" type="button">
       <svg class="mobile-menu-close-button__icon" width="18" height="18">
         <use href="./images/icons.svg#icon-close-button"></use>
       </svg>
     </button>
 
-    <div class="mobile-menu-container">
-      <nav class="mobile-menu-nav">
-        <ul class="mobile-menu-nav__list">
-          <li class="mobile-menu-nav__item">
-            <a class="mobile-menu-nav__link" href="./index.html">Студія</a>
-          </li>
-          <li class="mobile-menu-nav__item">
-            <a class="mobile-menu-nav__link" href="./portfolio.html">Портфоліо</a>
-          </li>
-          <li class="mobile-menu-nav__item">
-            <a class="mobile-menu-nav__link" href="#">Контакти</a>
-          </li>
-        </ul>
-      </nav>
+    <nav class="mobile-menu-nav">
+      <ul class="mobile-menu-nav__list">
+        <li class="mobile-menu-nav__item">
+          <a class="mobile-menu-nav__link" href="./index.html">Студія</a>
+        </li>
+        <li class="mobile-menu-nav__item">
+          <a class="mobile-menu-nav__link" href="./portfolio.html">Портфоліо</a>
+        </li>
+        <li class="mobile-menu-nav__item">
+          <a class="mobile-menu-nav__link" href="#">Контакти</a>
+        </li>
+      </ul>
+    </nav>
 
+    <div>
       <ul class="mobile-menu-contacts">
         <li class="mobile-menu-contacts__item">
           <a class="mobile-menu-contacts__link mobile-menu-contacts__link_size-color" href="tel:+380961111111">+38 096
@@ -563,10 +610,10 @@
         </li>
       </ul>
     </div>
-
-  </div> -->
+  </div>
 
   <script src="./js/modal.js"></script>
+  <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
